Implement races processing and background services

--- a/DogRaces.BackgroundServices/appsettings.Development.json
+++ b/DogRaces.BackgroundServices/appsettings.Development.json
@@ -2,13 +2,15 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
+      "Microsoft": "Warning",
       "Microsoft.AspNetCore": "Warning",
       "Microsoft.EntityFrameworkCore.Database.Command": "None",
       "Microsoft.EntityFrameworkCore.Database.Transaction": "None",
-      "Microsoft.EntityFrameworkCore.Database.Connection": "None"
+      "Microsoft.EntityFrameworkCore.Database.Connection": "None",
+      "DogRaces.Application": "Information",
+      "DogRaces.BackgroundServices": "Information"
     }
   },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Database=DogRaces;Username=postgres;Password=postgres"
   }
