Implement CreateRaceOdds method for race odds generation

--- a/DogRaces.Infrastructure/DogRaces.Infrastructure.csproj
+++ b/DogRaces.Infrastructure/DogRaces.Infrastructure.csproj
@@ -18,4 +18,11 @@
       <ProjectReference Include="..\DogRaces.Application\DogRaces.Application.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="appsettings.Development.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
